--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,17 @@
+*{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: rgb(255, 255, 255);
+}
+
 h2{
-  color: rgb(6, 65, 65);
+  
   text-align: center;
 }
 
-*{
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
 
 html{
   padding: 50px;
+  background-color: rgb(12, 57, 67);
 }
 
 input{
@@ -21,7 +24,24 @@ input{
 
 }
 
-#mostrar-gifs{
-  text-align: center;
+.card-grid{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 
+}
+
+.card{
+  align-content: center;
+  border: 1px solid grey;
+  border-radius: 6px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  overflow: hidden;
+}
+
+
+.card p {
+  padding: 5 px;
+  text-align: center;
 }
