Se realiza cambio de color al  fondo de pantalla y al tamaño de la letra del h3

--- a/src/index.css
+++ b/src/index.css
@@ -11,13 +11,14 @@ h2{
 
 html{
   padding: 50px;
-  background-color: rgb(12, 57, 67);
+  background: linear-gradient(to right, rgb(0, 0, 0) 0%, rgb(90, 90, 90) 50%, rgb(90, 90, 90) 50%, rgb(0, 0, 0) 100%);
 }
 
 input{
   color: rgb(18, 24, 72);
   width: 50%;
   border-radius: 5px;
+  border-color: rgb(255, 255, 255);
   margin-left: 25%;
 
   
@@ -44,4 +45,8 @@ input{
 .card p {
   padding: 5 px;
   text-align: center;
+}
+
+h3{
+  font-size: 50px;
 }
